base/old/mongo-standalone-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo
spec:
  podSelector:
    matchLabels:
      role: mongo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: theia
      podSelector:
        matchLabels:
          role: mongo-populate
    - namespaceSelector:
        matchLabels:
          name: theia
      podSelector:
        matchLabels:
          role: mongo-dump
    - namespaceSelector:
        matchLabels:
          name: theia
      podSelector:
        matchLabels:
          tier: backend
    - namespaceSelector:
        matchLabels:
          name: theia
      podSelector:
        matchLabels:
          role: import-module
    ports:
    - protocol: TCP
      port: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels: 
    role: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    role: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    role: mongo
spec:
  selector:
    matchLabels:
      role: mongo
  replicas: 1
  template:
    metadata:
      labels:
        role: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo:4.0
          ports:
            - containerPort: 27017
          volumeMounts:
          - name: mongo-data
            mountPath: /data/db
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-data-claim
